fix: supporting, need to handle case duplicate endpoint not work
